--- a/src/style/Styles.css
+++ b/src/style/Styles.css
@@ -27,6 +27,10 @@ input {
     padding: 5px;
 }
 
+input:focus {
+    outline: none;
+}
+
 button {
     display: flex;
     justify-content: center;
@@ -138,11 +142,13 @@ p {
 .modalShowed h3 {
     font-size: 28px;
     margin-bottom: 15px;
+    font-weight: 700;
 }
 
 .modalShowed p {
     font-size: 18px;
     margin: 0;
+    font-weight: 600;
 }
 
 .modalShowed button {
